stories/Molecules/Text/SmallCopy/smallcopy.scss
@import '../../../assets/scss/variables';
@import '../../../assets/scss/typography';
@import '../../../assets/scss/mixins';

/* small copy */
.smallcopy__box {
  margin-bottom: $spacing-04;

  a {
    @extend %border-none;
  }

  &--locale {
    margin-bottom: $spacing-32;

    strong {
      font-size: $font-size-16;
      letter-spacing: 0.03em;
    }
  }

  strong {
    margin-right: $spacing-04;
  }
}

